--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": ">=7.0",
         "composer/installers": "~1.0",
-        "tymon/jwt-auth": "1.0.*"
+        "tymon/jwt-auth": "1.0.0-rc.3"
     },
     "minimum-stability": "dev"
 }
