--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -39,3 +39,5 @@
     - German language
 1.3.1:
     - Small hotfix to fix the Carbon 2 incompatibility
+1.3.2:
+    - Fix typo on JsonValidationException
