--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -41,3 +41,6 @@
     - Small hotfix to fix the Carbon 2 incompatibility
 1.3.2:
     - Fix typo on JsonValidationException
+1.3.3:
+    - Added Czech Language support
+    - Mirror hotfixes
