--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,35 @@
 {
-    "name": "rluders/jwtauth",
-    "type": "october-plugin",
-    "description": "JSON Web Token Authentication plugin for OctoberCMS",
-    "keywords": ["october", "cms", "octobercms", "api", "authentication", "json web token", "jwt"],
-    "homepage": "http://www.luders.com.br",
-    "license": "GPL-3.0-or-later",
-    "authors": [
-        {
-            "name": "Ricardo Lüders",
-            "email": "ricardo@luders.com.br",
-            "homepage": "http://www.luders.com.br",
-            "role": "Developer"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "RLuders\\JWTAuth\\": ""
-        }
-    },
-    "require": {
-        "php": ">=7.0",
-        "composer/installers": "~1.0",
-        "tymon/jwt-auth": "1.0.0-rc.3"
-    },
-    "minimum-stability": "dev"
+  "name": "rluders/jwtauth",
+  "type": "october-plugin",
+  "description": "JSON Web Token Authentication plugin for OctoberCMS",
+  "keywords": [
+    "october",
+    "cms",
+    "octobercms",
+    "api",
+    "authentication",
+    "json web token",
+    "jwt"
+  ],
+  "homepage": "http://www.luders.com.br",
+  "license": "GPL-3.0-or-later",
+  "authors": [
+    {
+      "name": "Ricardo Lüders",
+      "email": "ricardo@luders.com.br",
+      "homepage": "http://www.luders.com.br",
+      "role": "Developer"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "RLuders\\JWTAuth\\": ""
+    }
+  },
+  "require": {
+    "php": ">=7.0",
+    "composer/installers": "~1.0",
+    "tymon/jwt-auth": "1.0.0-rc.5.1"
+  },
+  "minimum-stability": "dev"
 }
