--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,12 @@
     }
   },
   "require": {
-    "php": ">=7.0",
-    "composer/installers": "~1.0",
-    "tymon/jwt-auth": "1.0.0-rc.5.1"
+    "php": ">=7.2",
+    "composer/installers": "^1.0",
+    "laravel/framework": "~6.0",
+    "tymon/jwt-auth": "^1.0.2",
+    "nesbot/carbon": "2.43.0"
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
