--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   "require": {
     "php": ">=7.2",
     "composer/installers": "^1.0",
-    "laravel/framework": "~6.0",
+    "laravel/framework": "6.18.43",
     "tymon/jwt-auth": "^1.0.2",
     "nesbot/carbon": "2.43.0"
   },
