--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,8 @@
   "require": {
     "php": ">=7.2",
     "composer/installers": "^1.0",
-    "laravel/framework": "6.18.43",
-    "tymon/jwt-auth": "^1.0.2",
-    "nesbot/carbon": "2.43.0"
+    "laravel/framework": "~6",
+    "tymon/jwt-auth": "^1.0.2"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
