--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     }
   },
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.0",
     "composer/installers": "~1.0",
     "rainlab/user-plugin": "~1.0",
-    "tymon/jwt-auth": "^1.0.2"
+    "tymon/jwt-auth": "~0.5|^1.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
