update winter/wn-user-plugin require to ^2.0

--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,38 @@
 {
-  "name": "rluders/wn-jwtauth-plugin",
-  "type": "winter-plugin",
-  "description": "JSON Web Token Authentication plugin for Winter CMS",
-  "keywords": [
-    "winter",
-    "cms",
-    "wintercms",
-    "api",
-    "authentication",
-    "json",
-    "web token",
-    "jwt"
-  ],
-  "homepage": "http://www.luders.com.br",
-  "license": "GPL-3.0-or-later",
-  "authors": [
-    {
-      "name": "Ricardo Lüders",
-      "email": "ricardo@luders.com.br",
-      "homepage": "http://www.luders.com.br",
-      "role": "Developer"
-    }
-  ],
-  "autoload": {
-    "psr-4": {
-      "RLuders\\JWTAuth\\": ""
-    }
-  },
-  "require": {
-    "php": ">=7.0",
-    "composer/installers": "~1.0",
-    "winter/wn-user-plugin": "~1.0",
-    "tymon/jwt-auth": "~0.5|^1.0"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "name": "rluders/wn-jwtauth-plugin",
+    "type": "winter-plugin",
+    "description": "JSON Web Token Authentication plugin for Winter CMS",
+    "keywords": [
+        "winter",
+        "cms",
+        "wintercms",
+        "api",
+        "authentication",
+        "json",
+        "web token",
+        "jwt"
+    ],
+    "homepage": "http://www.luders.com.br",
+    "license": "GPL-3.0-or-later",
+    "authors": [
+        {
+            "name": "Ricardo Lüders",
+            "email": "ricardo@luders.com.br",
+            "homepage": "http://www.luders.com.br",
+            "role": "Developer"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "RLuders\\JWTAuth\\": ""
+        }
+    },
+    "require": {
+        "php": ">=7.0",
+        "composer/installers": "~1.0",
+        "winter/wn-user-plugin": "^2.0",
+        "tymon/jwt-auth": "~0.5|^1.0"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
