--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "php": ">=7.0",
         "composer/installers": "~1.0",
         "winter/wn-user-plugin": "^2.0",
-        "tymon/jwt-auth": "~0.5|^1.0"
+        "php-open-source-saver/jwt-auth": "^2.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
