--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,10 @@
         "php-open-source-saver/jwt-auth": "^2.1"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
+    }
 }
